--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,21 @@
 
 /* link the web font used for the level 1 heading here */
 
+@font-face{
+ font-family: "Baskerville";
+ src: url("/fonts/Baskerville.ttc") format("ttc");
+}
+
 /*////////// Global Styles //////////*/
 
 body {
 	background: #F3EBE9;
 	font-size: 100%;
 	font-family: 'Times New Roman', serif;
+}
+
+h1{
+  font-family: "Baskerville", serif;
 }
 
 img{
